[gd_scene load_steps=3 format=3 uid="uid://exnt8cbqpt5a"]

[ext_resource type="Script" uid="uid://bdndepia500gy" path="res://stages/stage.gd" id="1_qghdb"]
[ext_resource type="PackedScene" uid="uid://cfe2qi0ae512k" path="res://time_mode.tscn" id="3_ar3c0"]

[node name="Stage" type="Node2D" node_paths=PackedStringArray("game_mode")]
script = ExtResource("1_qghdb")
game_mode = NodePath("TimeMode")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Players" type="Node" parent="."]

[node name="TimeMode" parent="." node_paths=PackedStringArray("players", "start_timer_label", "track_time_label", "end_text_label", "lap_label") instance=ExtResource("3_ar3c0")]
players = NodePath("../Players")
start_timer_label = NodePath("../TimeControl/TimeLabel")
track_time_label = NodePath("../TimeControl/TimeLabel")
end_text_label = NodePath("../HeaderControl/HeaderLabel")
lap_label = NodePath("../HeaderControl/HeaderLabel")

[node name="TimeControl" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0

[node name="TimeLabel" type="Label" parent="TimeControl"]
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -349.0
offset_right = 146.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeaderControl" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -372.0
offset_bottom = -372.0
grow_horizontal = 2

[node name="HeaderLabel" type="Label" parent="HeaderControl"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1240.0
offset_top = -174.5
offset_right = 1240.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Press space to leave"
horizontal_alignment = 1
vertical_alignment = 1
